--- a/alu-web-development/html_basic/index.html
+++ b/alu-web-development/html_basic/index.html
@@ -19,5 +19,7 @@
     <p>This is my third paragraph</p>
 
     <p>This is my fourth paragraph</p>
+
+    <a href="https://www.holbertonschool.com/holberton-logo.png"><img src="https://www.holbertonschool.com/holberton-logo.png" alt="Image"></a>
 </body>
 </html>
