--- a/alu-web-development/css_basic/index.html
+++ b/alu-web-development/css_basic/index.html
@@ -13,12 +13,12 @@
 
 <header>
     <ul>
-        <li><a href="/base_index.html">Base </a></li>
-        <li><a href="tweets.html">Embeded Tweets</a></li>
+        <li><a id='nav' href="/base_index.html">Base </a></li>
+        <li><a id="nav" href="tweets.html">Embeded Tweets</a></li>
     </ul>
 </header>
 
-<main>
+<main class="main">
     <article>
         <h1>This is my heading 1</h1>
 
@@ -34,7 +34,7 @@
     
         <p>This is my fourth paragraph</p>
     
-        <a href="https://www.holbertonschool.com/holberton-logo.png"><img src="https://www.holbertonschool.com/holberton-logo.png" alt="Image"></a
+        <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Gutenberg_Bible%2C_Lenox_Copy%2C_New_York_Public_Library%2C_2009._Pic_01.jpg/300px-Gutenberg_Bible%2C_Lenox_Copy%2C_New_York_Public_Library%2C_2009._Pic_01.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Gutenberg_Bible%2C_Lenox_Copy%2C_New_York_Public_Library%2C_2009._Pic_01.jpg/300px-Gutenberg_Bible%2C_Lenox_Copy%2C_New_York_Public_Library%2C_2009._Pic_01.jpg" alt="Image"></a
     </article>
 
     <aside>
@@ -48,7 +48,6 @@
 </main>
 
 <footer>
-    <p>Made by Omar Keita - <a href="https://twitter.com/home" target="_blank">here</a></p>
 </footer>
 </body>
 
